# sdl2_platformer

./: :w  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: Game.cpp.1A1A227633140208.idx  Game.hpp.66A5DE8892BCC5EC.idx  consts.hpp.7B077B627249C2CA.idx  consts.hpp.7D4071F29E657221.idx  consts.hpp.98B2407BE68AF187.idx  entity.hpp.ADBED3FB6652EC24.idx  entity.hpp.B46D9549C97D6566.idx  entity.hpp.D3CD3A60CE9B7468.idx  game.cpp.BF80E357DED1FB79.idx  game.cpp.E1628F1BD1969628.idx  game.cpp.EF9E7C8E8074FF5A.idx  game.hpp.319F8787BA533D7D.idx  game.hpp.7E6BEB8EDC7AC4FD.idx  game.hpp.D92B4A8B9D2F0E8D.idx  gameMath.hpp.1A7C0553E1070546.idx  gameMath.hpp.82625F0B4EEFD70A.idx  gameMath.hpp.E4A9F69B6909F267.idx  main.cpp.36E250D6A0A07C31.idx  main.cpp.6E85C99061E6F6DA.idx  main.cpp.DB1B2B576E8D821D.idx  math.hpp.76480DF45E4ACAC8.idx  physicsManager.cpp.0F8E248CF525A3B6.idx  physicsManager.cpp.4B52C72F69AC6485.idx  physicsManager.cpp.9216BD2FE7084A8A.idx  physicsManager.hpp.437A650C606FBE7F.idx  physicsManager.hpp.92880C9514E6D8F8.idx  physicsManager.hpp.C4422F7F01CF24FC.idx  player.cpp.9DE382C2EA5D9102.idx  player.cpp.BB500076ADC999CE.idx  player.cpp.C2F0C527863C1478.idx  player.hpp.96E3767E45083FB8.idx  player.hpp.ACB26C18752ABBE7.idx  player.hpp.CE0C5DEE97A0A720.idx  tile.cpp.01F454AD3AB02097.idx  tile.cpp.2003FFF9CE5BEBD1.idx  tile.cpp.FCB712EFCEDFCA34.idx  (+3 more)
include/: consts.hpp  entity.hpp  game.hpp  gameMath.hpp  math.hpp  physicsManager.hpp  player.hpp  tile.hpp
source/: Game.cpp  game.cpp  main.cpp  physicsManager.cpp  player.cpp  tile.cpp
